@@ -6,8 +6,8 @@ plugins {
 
 group = 'nano'
 
-sourceCompatibility = '14'
-targetCompatibility = '14'
+sourceCompatibility = '15'
+targetCompatibility = '15'
 
 configurations {
     compileOnly {
@@ -17,19 +17,6 @@ configurations {
 
 repositories {
     mavenCentral()
-}
-
-// enable-preview
-tasks.withType(JavaCompile) {
-    options.compilerArgs += '--enable-preview'
-}
-
-tasks.withType(JavaExec) {
-    jvmArgs += '--enable-preview'
-}
-
-tasks.withType(Test) {
-    jvmArgs += '--enable-preview'
 }
 
 processResources {
@@ -62,9 +49,6 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     // project common
     implementation project(':common')
-    // lombok
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
     // test
     testImplementation 'org.springframework.amqp:spring-rabbit-test'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
